--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -12,7 +12,7 @@
 <body>
     <div class="countainer-dashboard">
 
-        <img class="img" src="/img/background.jpg" />
+        <img class="img" src="/img/background.png" />
 
         <div class="content-dashboard">
 
@@ -78,12 +78,12 @@
                     <form action="/logout" method="get">
                         <button type="submit" class="btn-delete btn btn-primary">logout</button>
                     </form>
-               
-                        <a href="http://localhost:3000/blogger/dashboard/articles/seeMine"> <button
-                                id="btn-see-my-articles" class="btn btn-primary">See My Articles</button></a>
 
-                                <a href="http://localhost:3000/blogger/dashboard/articles/seeAll"> <button
-                                    id="btn-see-my-articles" class="btn btn-primary">See Whole Articles</button></a>
+                    <a href="http://localhost:3000/blogger/dashboard/articles/seeMine"> <button id="btn-see-my-articles"
+                            class="btn btn-primary">See My Articles</button></a>
+
+                    <a href="http://localhost:3000/blogger/dashboard/articles/seeAll"> <button id="btn-see-my-articles"
+                            class="btn btn-primary">See Whole Articles</button></a>
                     <form action="/articles/creat" method="get">
                         <button id="btn-creat-article" class="btn btn-primary">creatArticle</button>
                     </form>
