--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <div class="countainer">
-        <img class="img" src="/img/background.jpg" />
+        <img class="img" src="/img/background.png" />
         <div class="div-form-login">
             <form class="login-form" method="post" action="/login/page/doing">
                 <p>
