--- a/views/registerPage.ejs
+++ b/views/registerPage.ejs
@@ -13,7 +13,7 @@
 
 <body>
     <div class="countainer">
-        <img class="img" src="/img/background.jpg" />
+        <img class="img" src="/img/background.png" />
         <div class="div-form-reg">
             <form class="register-form" action="/register/page/doing" method="post" role="form"
                 enctype="multipart/form-data">
