--- a/views/wholeArticles.ejs
+++ b/views/wholeArticles.ejs
@@ -57,7 +57,7 @@
             <% } %>
 
                 <div class="d-update-article">
-                    <form action="/blogger/dashboard/articles/creat" method="post" enctype="multipart/form-data"
+                    <form action="/blogger/dashboard/articles/seeAll/update" method="post" enctype="multipart/form-data" role="form"
                         role="form">
                         <div class="modal" id="modal-updateArticle">
                             <div class="modal-body">
