--- a/views/test.ejs
+++ b/views/test.ejs
@@ -8,11 +8,12 @@
 </head>
 
 <body>
-    <%= msg %> 
-    <form action="/img" method="post" enctype="multipart/form-data">
+  
+    <form action="/do" method="post">
         <div class="form-group">
-            <label for="avatar">put yor image</label>
-            <input type="file" id="avatar" name="avatar">
+            <label for="avatar">fname</label>
+            <input type="text" id="fname" name="fname">
+            <input type="text" id="fname" name="abc" itemid="">
         </div>
         <button type="submit">SEND</button>
 
