--- a/views/bloggerArticles.ejs
+++ b/views/bloggerArticles.ejs
@@ -27,19 +27,18 @@
         <% for(var index=0;index < articles.length ;index++ ){ %>
             <div class="d-article">
 
+
+
                 <div class="d-img-article">
                     <img class="img-blogger-article" src="/img/<%=articles[index].image%>">
                 </div>
+
                 <div class="d-summary">
                     <h3>summary :</h3>
                     <p>
                         <%= (articles[index].text).slice(0,100) %>
                     </p>
-
-
-
                 </div>
-
                 <div class="d-info">
 
                     <h3>writer:</h3>
@@ -49,21 +48,32 @@
                         <%=articles[index].createdAt %>
                 </div>
 
-                <div idArticle=" <%=articles[index]._id %>">
+                <div id="d-btn-article" idArticle=" <%=articles[index]._id %>">
 
-                    <button id="btn-update-article" class="btn-update-article btn-delete btn btn-primary">update</button>
 
-                    <a href="http://localhost:3000/blogger/dashboard/articles/seeMine"> <button id="btn-see-my-articles"
-                            class="btn btn-primary">seeArticlePerfectly</button></a>
+                    <button id="btn-update-article"
+                        class="btn-update-article btn-delete btn btn-primary">update</button>
 
-                    <form action="http://localhost:3000/blogger/dashboard/articles/seeMine/delete" method="get"></form>
-                    <button id="btn-see-my-articles" class="btn btn-primary">delete</button>
+                    <form action="http://localhost:3000/blogger/dashboard/articles/seeMine/detailsOneArticle"
+                        method="post">
+
+                        <input type="text" style="display: none;" id="article-details" name="idArticle">
+                        <button type="submit" id="btn-see-my-articles"
+                            class="btn-details-articles btn btn-primary">seeDetailsArticle</button>
+                    </form>
+
+                    <form action="http://localhost:3000/blogger/dashboard/articles/seeMine/delete" method="post">
+                        <input type="text" style="display: none;" id="article-delete" name="idArticle">
+                        <button type="submit" id="btn-delete-articles"
+                            class="btn-delete-articles btn btn-primary">Delete</button>
+                    </form>
                 </div>
+
 
             </div>
             <div class="d-update-article">
 
-                <form action="/blogger/dashboard/articles/seeMine/update" method="post" enctype="multipart/form-data" 
+                <form action="/blogger/dashboard/articles/seeMine/update" method="post" enctype="multipart/form-data"
                     role="form">
                     <div class="modal" id="modal-updateArticle">
                         <div class="modal-body">
@@ -74,8 +84,8 @@
                                         aria-label="Close"> &#10006</button>
                                 </div>
                                 <div class="modal-body">
-                    
-                                    <input type="text" style="display: none;" id="idArticle" name="idArticle">
+
+                                    <input type="text" style="display: none;" id="article-update" name="idArticle">
                                     <div class="">
 
                                         <label for="titleArticle">titleArticle:</label>
@@ -105,7 +115,7 @@
                             </div>
                         </div>
                     </div>
-                   
+
                 </form>
             </div>
             <% } %>
