--- a/views/userArticles.ejs
+++ b/views/userArticles.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <div class="title">
-        <a href="http://localhost:3000/blogger/dashboard"> <button id="btn-see-my-articles" class="btn btn-primary">back
+        <a href="http://localhost:3000/:role/dashboard"> <button id="btn-see-my-articles" class="btn btn-primary">back
                 dashboard</button></a>
         <h1>
             <%=msg%>
