--- a/views/wholeArticles.ejs
+++ b/views/wholeArticles.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <div class="title">
-        <a href="http://localhost:3000/blogger/dashboard"> <button id="btn-see-my-articles" class="btn btn-primary">back
+        <a href="http://localhost:3000/<%=role%>/dashboard"> <button id="btn-see-my-articles" class="btn btn-primary">back
                 dashboard</button></a>
         <h1>
             <%=msg%>
@@ -42,73 +42,9 @@
                         <h3> createdAt:</h3>
                         <%=articles[index].createdAt %>
                 </div>
-                <div id="d-btn-article" idArticle=" <%=articles[index]._id %>">
-
-                    <button class="btn-update-article btn-delete btn btn-primary">update</button>
-
-                    <form action="http://localhost:3000/blogger/dashboard/articles/seeAll/detailsOneArticle"
-                        method="post">
-
-                        <input type="text" style="display: none;" id="article-details" name="idArticle">
-                        <button type="submit" id="btn-see-my-articles"
-                            class="btn-details-articles btn btn-primary">seeDetailsArticle</button>
-                    </form>
-
-
-                    <form action="http://localhost:3000/blogger/dashboard/articles/seeAll/delete" method="post">
-                        <input type="text" style="display: none;" class="article-delete" name="idArticle">
-                        <button type="submit" id="btn-delete-articles"
-                            class="btn-delete-articles btn btn-primary">Delete</button>
-                    </form>
-                </div>
             </div>
 
 
-            <div class="d-update-article">
-                <form action="/blogger/dashboard/articles/seeAll/update" method="post" enctype="multipart/form-data"
-                    role="form" role="form">
-                    <div class="modal" id="modal-updateArticle">
-                        <div class="modal-body">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title">update Article</h5>
-
-                                    <input type="text" style="display: none;" id="article-update" name="idArticle">
-                                    <button type="button" class="close-updateArticle btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"> &#10006</button>
-                                </div>
-                                <div class="modal-body">
-                                    <div class="">
-
-                                        <label for="titleArticle">titleArticle:</label>
-
-                                        <input type="text" id="titleArticle" name="titleArticle"
-                                            placeholder="titleArticle">
-                                    </div>
-                                    <div class="form-group ">
-                                        <label for="textArticle">textArticle:</label>
-                                        <textarea id="textArticle" name="textArticle" rows="10" cols="100">
-                                        </textarea>
-
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="imgWholeArticlePage">Image Of Article:</label>
-                                        <input type="file" id="imgWholeArticlePage" name="imgWholeArticlePage">
-
-                                    </div>
-
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="close-updateArticle btn btn-secondary">Close</button>
-                                    <button type="submit" class="btn btn-primary">Save changes</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </form>
-            </div>
             <% } %>
     </div>
 
