--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -231,6 +231,6 @@
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<script src="/js/ajax.js"></script>
+<script src="/js/main.js"></script>
 
 </html>
