--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -39,5 +39,5 @@
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
+<script src="/js/main.js"></script>
 </html>
