--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -12,7 +12,7 @@
 <body>
     <div class="countainer-dashboard">
 
-        <img class="img" src="/img/background.png" />
+        <img class="img" src="/img/background.jpeg" />
 
         <div class="content-dashboard">
 
