--- a/public/css/Articles.css
+++ b/public/css/Articles.css
@@ -1,55 +1,66 @@
 .countainer {
     width: 100%;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+    position: relative;
+
 
 }
 
-.d-article {
-    margin: 20px 30px;
-    border: 2px black solid;
-    width: 400px;
-    height: 700px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
+.img {
+
+    position: absolute;
+    z-index: 0;
 }
 
+.content {
 
-.d-img-article {
+    width: 95%;
+    position: absolute;
+    z-index: 1;
+}
 
-
+.articles {
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-flow: row wrap;
+    justify-content: space-around;
+
 }
 
-.img-blogger-article {
-    width: 200px;
+.card {
+    border: 1px rgb(241, 235, 235) solid;
+    background-color: rgb(243, 241, 241);
+    border-radius: 10px;
+    width: 300px;
+    height: 550px;
+    margin: 10px 0 ;
+}
+
+.card-img-top {
+    border-radius: 10px;
+    width: 300px;
     height: 100px;
 
 }
 
 
-.d-summary {
+.card-body {
     overflow: auto;
     width: 100%;
-    height: 300px;
+    height: 150px;
 }
 
-.d-info {
+
+.ul-identify {
 
     width: 100%;
-    height: 170px;
+    height: 200px;
+
 }
 
-.title {
+.d-btns {
+    width: 100%;
+    height: 100px;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    width: 800px;
-    margin: 20px auto 0;
+    justify-content: space-between;
 }
-
