--- a/views/listOfBloggers.ejs
+++ b/views/listOfBloggers.ejs
@@ -9,110 +9,108 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/listOfBlogger.css" />
 
 </head>
 
 <body>
-    <h3>
-        <%= msg %>
-    </h3>
-    <a href="http://localhost:3000/admin/dashboard"> <button id="btn-see-my-articles" class="btn btn-primary">Back
-            Dashboard</button></a>
-    <div>
-        <table class="table table-hover table-dark">
-
-            <thead>
-                <tr>
-                    <th scope="col">userName</th>
-                    <th scope="col">firstName</th>
-                    <th scope="col">lastName</th>
-                    <th scope="col">gender</th>
-                    <th scope="col">phoneNumber</th>
-
-                </tr>
-            </thead>
-            <tbody>
-                <p style="display: none;">
-                    <%= users %>
-                </p>
-                <% for(var index=0;index < users.length ;index++ ){ %>
-                    <div>
+    <div class="countanier">
+        <img class="img" src="/img/background.jpeg" />
+        <div class="content">
+            <h3>
+                <%= msg %>
+            </h3>
+            <a href="http://localhost:3000/admin/dashboard"> <button id="btn-see-my-articles" class="btn btn-primary">Back
+                    Dashboard</button></a>
+            <div >
+                <table class="table table-hover table-dark">
+    
+                    <thead>
                         <tr>
-
-                            <th scope="row">
-                                <%= users[index].userName %>
-                            </th>
-                            <td>
-                                <%= users[index].firstName %>
-                            </td>
-                            <td>
-                                <%= users[index].lastName %>
-                            </td>
-                            <td>
-                                <%= users[index].gender %>
-                            </td>
-                            <td>
-                                <%= users[index].phoneNumber %>
-                            </td>
-                            <td idBlogger="<%=users[index]._id%>">
-
-                                <p idArticle="5"></p>
-                                <button class="btn-changePassBlogger btn-delete btn btn-primary">changePass</button>
-                                <form action="/admin/dashboard/SeeBloggers/deleteBlogger" method="post"
-                                    class="formDeleteBlogger">
-                                    <input type="text" style="display: none;" id="idBlogger" name="idBlogger">
-                                    <button type="submit" class="btn-delete-blogger btn-delete btn btn-primary">delete
-                                        user</button>
-                                </form>
-                            </td>
-
+                            <th scope="col">userName</th>
+                            <th scope="col">firstName</th>
+                            <th scope="col">lastName</th>
+                            <th scope="col">gender</th>
+                            <th scope="col">phoneNumber</th>
+    
                         </tr>
-                    </div>
-                    <% } %>
-            </tbody>
-        </table>
-
-        <div class="modal" tabindex="-1" role="dialog" id="modalChangePass">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Chagne Password Blogger</h5>
-                        <button type="button" class="btn-close-changePassBlogger" data-dismiss="modal"
-                            aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <form method="post" action="/admin/dashboard/SeeBloggers/changePassBlogger">
-                        <input type="text" style="display: none;" id="idBlogger" name="idBlogger">
-                        <div class="modal-body">
-                            <label for="password">newPassword:</label>
-                            <input type="password" id="password" name="password">
-
+                    </thead>
+                    <tbody>
+                        <p style="display: none;">
+                            <%= users %>
+                        </p>
+                        <% for(var index=0;index < users.length ;index++ ){ %>
+                            <div>
+                                <tr>
+    
+                                    <th scope="row">
+                                        <%= users[index].userName %>
+                                    </th>
+                                    <td>
+                                        <%= users[index].firstName %>
+                                    </td>
+                                    <td>
+                                        <%= users[index].lastName %>
+                                    </td>
+                                    <td>
+                                        <%= users[index].gender %>
+                                    </td>
+                                    <td>
+                                        <%= users[index].phoneNumber %>
+                                    </td>
+                                    <td idBlogger="<%=users[index]._id%>">
+    
+                                        <p idArticle="5"></p>
+                                        <button class="btn-changePassBlogger btn-delete btn btn-primary">changePass</button>
+                                        <form action="/admin/dashboard/SeeBloggers/deleteBlogger" method="post"
+                                            class="formDeleteBlogger">
+                                            <input type="text" style="display: none;" id="idBlogger" name="idBlogger">
+                                            <button type="submit"
+                                                class="btn-delete-blogger btn-delete btn btn-primary">delete
+                                                user</button>
+                                        </form>
+                                    </td>
+    
+                                </tr>
+                            </div>
+                            <% } %>
+                    </tbody>
+                </table>
+    
+                <div class="modal" tabindex="-1" role="dialog" id="modalChangePass">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Chagne Password Blogger</h5>
+                                <button type="button" class="btn-close-changePassBlogger" data-dismiss="modal"
+                                    aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <form method="post" action="/admin/dashboard/SeeBloggers/changePassBlogger">
+                                <input type="text" style="display: none;" id="idBlogger" name="idBlogger">
+                                <div class="modal-body">
+                                    <label for="password">newPassword:</label>
+                                    <input type="password" id="password" name="password">
+    
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="submit" class="btn btn-primary">Save changes</button>
+                                    <button type="button" class="btn-close-changePassBlogger btn btn-secondary"
+                                        data-dismiss="modal">Close</button>
+                                </div>
+                            </form>
                         </div>
-                        <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary">Save changes</button>
-                            <button type="button" class="btn-close-changePassBlogger btn btn-secondary"
-                                data-dismiss="modal">Close</button>
-                        </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
+        </div>
+       
 
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="/js/main.js"></script>
+
 </html>
