--- a/views/detailArticleBlogger.ejs
+++ b/views/detailArticleBlogger.ejs
@@ -16,8 +16,7 @@
 
         <div class="content">
             <div class="title">
-                <a href="http://localhost:3000/blogger/dashboard"> <button id="btn-see-my-articles"
-                        class="btn btn-primary">Dashboard
+                <a href="/blogger/dashboard"> <button id="btn-see-my-articles" class="btn btn-primary">Dashboard
                     </button></a>
                 <h1>
                     <%=msg%>
@@ -55,19 +54,42 @@
                             <%= article.createdAt %>
                         </p>
                 </div>
-                <div class="comments">
-                    <% for(var index=0;index < comment.length ;index++ ){ %>
-                        
+            </div>
+            <div>
+                <form action="/blogger/dashboard/articles/seeAll/detailsOneArticle/comment" method="post">
+                    <div class="set-comment">
+                        <label for="comment">
+                            <h3>Your Commet:</h3>
+                        </label>
+                        <input style="display: none;" value="<%= article._id %>" name="idArticle">
+                        <textarea id="comment" name="comment" rows="4">
+                            </textarea>
+                        <button type="submit" class="btn btn-primary">Save
+                            Comment</button>
+                    </div>
+
+                </form>
+
+            </div>
+            <div class="comments">
+                <% for(var index=0;index < comment.length ;index++ ){ %>
+                    <div class="comment">
+
                         <h5>
-                            comment[index].writer
+                            <%= comment[index].writer %> 
+                            
                         </h5>
                         <p>
-                            comment[index].text
+                            <%=comment[index].text %> 
+                            
                         </p>
-                        <% } %>
-                </div>
+                    </div>
+                    <hr class="hr">
+                    <% } %>
             </div>
+
         </div>
+
     </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
