--- a/views/wholeArticles.ejs
+++ b/views/wholeArticles.ejs
@@ -11,47 +11,128 @@
 </head>
 
 <body>
-    
-    <div class="title">
-        <a href="http://localhost:3000/<%=role%>/dashboard"> <button id="btn-see-my-articles" class="btn btn-primary">back
-                dashboard</button></a>
-        <h1>
-            <%=msg%>
-        </h1>
-    </div>
-    <p style="display: none;">
-        <%= articles %>
-    </p>
+
     <div class="countainer">
 
-        <% for(var index=0;index < articles.length ;index++ ){ %>
-            <div class="d-article">
+        <img class="img" src="/img/background.jpeg" />
 
-                <div class="d-img-article">
-                    <img class="img-blogger-article" src="/img/<%=articles[index].image%>">
-                </div>
-                <div class="d-summary">
-                    <h3>summary :</h3>
-                    <%= articles[index].text %>
-                </div>
+        <div class="content">
 
-                <div class="d-info">
-
-                    <h3>writer:</h3>
-                    <%=articles[index].writer %>
-
-                        <h3> createdAt:</h3>
-                        <%=articles[index].createdAt %>
-                </div>
+            <div class="title">
+                <a href="http://localhost:3000/:role/dashboard"> <button id="btn-see-my-articles"
+                        class="btn btn-primary">back
+                        dashboard</button></a>
+                <h1>
+                    <%=msg%>
+                </h1>
             </div>
 
+            <p style="display: none;">
+                <%= articles %>
+            </p>
+            <div class="articles">
+                <% for(var index=0;index < articles.length ;index++ ){ %>
+                    <div class="card">
+                        <img class="card-img-top" src="/img/<%=articles[index].image%>" alt="Card image cap">
+                        <div class="card-body">
+                            <h2 class="card-title">
+                                <%=articles[index].title %>
+                            </h2>
+                            <div class="summary">
+                                <p class="card-text">
+                                    <%= (articles[index].text).slice(0,100)%>
+                                </p>
+                            </div>
 
-            <% } %>
+                        </div>
+
+
+                        <ul class="ul-identify list-group list-group-flush">
+                            <li class="list-group-item">
+                                <h3>writer:</h3>
+                                <%=articles[index].writer %>
+
+                            </li>
+                            <li class="list-group-item">
+                                <h3> createdAt:</h3>
+                                <%=articles[index].createdAt %>
+                            </li>
+
+                        </ul>
+
+
+                        <div class="d-btns" idArticle="<%=articles[index]._id%>">
+                            <form action="/blogger/dashboard/articles/seeAll/detailsOneArticle"
+                                method="post">
+
+                                <input type="text" style="display: none;" value="<%=articles[index]._id%>"
+                                    name="idArticle">
+                                <button type="submit" id="btn-see-my-articles"
+                                    class="btn-details-articles btn btn-primary">seeDetailsArticle</button>
+                            </form>
+
+                            <form action="/admin/dashboard/articles/seeMine/delete" method="post">
+                                <input type="text" style="display: none;" value="<%=articles[index]._id%>"
+                                    name="idArticle">
+                                <button type="submit" style="display: none;" id="btn-delete-articles"
+                                    class="btn-delete-articles-admin btn btn-primary">Delete</button>
+                            </form>
+                        </div>
+                    </div>
+                    <% } %>
+
+            </div>
+
+            <div class="d-update-article">
+                <form action="/admin/dashboard/articles/seeMine/update" method="post" enctype="multipart/form-data"
+                    role="form">
+                    <div class="modal" id="modal-updateArticle-admin">
+                        <div class="modal-body">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">Update Article</h5>
+                                    <button type="button" class="close-updateArticle btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"> &#10006</button>
+                                </div>
+                                <div class="modal-body">
+
+                                    <input type="text" style="display: none;" id="idArticle-admin" name="idArticle">
+                                    <div class="">
+
+                                        <label for="titleArticle">titleArticle:</label>
+
+                                        <input type="text" id="titleArticle" name="titleArticle"
+                                            placeholder="titleArticle">
+                                    </div>
+                                    <div class="form-group ">
+                                        <label for="textArticle">textArticle:</label>
+                                        <textarea id="textArticle" name="textArticle" rows="10" cols="100">
+                                                </textarea>
+
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="UpdateArticleImg">Image Of Article:</label>
+                                        <input type="file" id="UpdateArticleImg" name="UpdateArticleImg">
+
+                                    </div>
+
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="close-updateArticle btn btn-secondary">Close</button>
+                                    <button id="save-update-article" type="submit" class="btn btn-primary">Save
+                                        changes</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+        </div>
     </div>
-
-
-
 </body>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="/js/main.js"></script>
